--- a/seachart/jrender/build.xml
+++ b/seachart/jrender/build.xml
@@ -3,17 +3,13 @@
   <property name="srcmain" location="../src"/>
   <property name="build" location="build"/>
   <property name="jarfile" location="./jrender.jar"/>
-  <property name="batik.dir" value="../libs/"/>
-  <path id="classpath">
-    <fileset dir="${batik.dir}" includes="**/batik*.jar"/>
-  </path>
 
   <target name="init">
     <mkdir dir="${build}"/>
   </target>
 
   <target name="compile" depends="init" description="compile the source " >
-    <javac includeantruntime="false" sourcepath="${srcmain}" srcdir="${src}" destdir="${build}" classpathref="classpath" encoding="UTF-8" />
+    <javac includeantruntime="false" sourcepath="${srcmain}" srcdir="${src}" destdir="${build}" encoding="UTF-8" />
   </target>
 
   <target name="dist" depends="compile" description="generate the distribution" >
@@ -22,12 +18,6 @@
         <attribute name="Main-Class" value="jrender.Jrender"/>
         <attribute name="Class-Path" value="$jarfile"/>
       </manifest>
-      <zipgroupfileset dir="${batik.dir}" includes="**/batik-svggen.jar" />
-      <zipgroupfileset dir="${batik.dir}" includes="**/batik-dom.jar" />
-      <zipgroupfileset dir="${batik.dir}" includes="**/batik-util.jar" />
-      <zipgroupfileset dir="${batik.dir}" includes="**/batik-awt-util.jar" />
-      <zipgroupfileset dir="${batik.dir}" includes="**/batik-ext.jar" />
-      <zipgroupfileset dir="${batik.dir}" includes="**/batik-xml.jar" />
     </jar>
   </target>
 
