--- a/buildings_tools/build.xml
+++ b/buildings_tools/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project name="buildings_tools" default="dist" basedir=".">
     <!-- enter the SVN commit message -->
-    <property name="commit.message" value="BuildingTools: Alt key to disable tags"/>
+    <property name="commit.message" value="buildings_tools: add option to disable click+drag"/>
     <!-- enter the *lowest* JOSM version this plugin is currently compatible with -->
     <property name="plugin.main.version" value="14960"/>
     
