--- a/surveyor/.classpath
+++ b/surveyor/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" output="bintest" path="unit">
+	<classpathentry kind="src" output="bintest" path="test/unit">
 		<attributes>
 			<attribute name="test" value="true"/>
 		</attributes>
