--- a/terracer/build.xml
+++ b/terracer/build.xml
@@ -7,6 +7,7 @@
     <property name="plugin.description" value="Make terraced houses out of single blocks."/>
     <property name="plugin.icon" value="images/terrace.png"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/Terracer"/>
+	<property name="plugin.canloadatruntime" value="true"/>
 
     <!-- ** include targets that all plugins have in common ** -->
     <import file="../build-common.xml"/>
