--- a/seachart/jchart/build.xml
+++ b/seachart/jchart/build.xml
@@ -3,13 +3,17 @@
   <property name="srcmain" location="../src"/>
   <property name="build" location="build"/>
   <property name="jarfile" location="./jchart.jar"/>
+  <property name="batik.dir" value="../libs/"/>
+  <path id="classpath">
+    <fileset dir="${batik.dir}" includes="**/batik*.jar"/>
+  </path>
 
   <target name="init">
     <mkdir dir="${build}"/>
   </target>
 
   <target name="compile" depends="init" description="compile the source " >
-    <javac includeantruntime="false" sourcepath="${srcmain}" srcdir="${src}" destdir="${build}" encoding="UTF-8" />
+    <javac includeantruntime="false" sourcepath="${srcmain}" srcdir="${src}" destdir="${build}" classpathref="classpath" encoding="UTF-8" />
   </target>
 
   <target name="dist" depends="compile" description="generate the distribution" >
@@ -18,6 +22,12 @@
         <attribute name="Main-Class" value="jchart.Jchart"/>
         <attribute name="Class-Path" value="$jarfile"/>
       </manifest>
+      <zipgroupfileset dir="${batik.dir}" includes="**/batik-svggen-1.8.jar" />
+      <zipgroupfileset dir="${batik.dir}" includes="**/batik-dom-1.8.jar" />
+      <zipgroupfileset dir="${batik.dir}" includes="**/batik-util-1.8.jar" />
+      <zipgroupfileset dir="${batik.dir}" includes="**/batik-awt-util-1.8.jar" />
+      <zipgroupfileset dir="${batik.dir}" includes="**/batik-ext-1.8.jar" />
+      <zipgroupfileset dir="${batik.dir}" includes="**/batik-xml-1.8.jar" />
     </jar>
   </target>
 
