--- a/apache-http/.classpath
+++ b/apache-http/.classpath
@@ -3,9 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JOSM"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=JOSM-apache-http&amp;ivyXmlPath=ivy.xml&amp;confs=*"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JOSM-apache-commons"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.5.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.4.10.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpmime-4.5.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
