--- a/DirectUpload/build.xml
+++ b/DirectUpload/build.xml
@@ -12,7 +12,7 @@
     <property name="plugin.author" value="Subhodip Biswas"/>
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.DirectUpload.UploadDataGuiPlugin"/>
     <property name="plugin.description" value="This plugin directly upload GPS Traces from current active layer in JOSM to openstreetmap.org."/>
-    <property name="plugin.icon" value="images/UploadAction"/>
+    <property name="plugin.icon" value="images/UploadAction.svg"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/index.php/User:Subhodip/GSoC_Doc#DirectUpload_Plugin_in_JOSM_:"/>
     <!--<property name="plugin.early" value="..."/>-->
     <!--<property name="plugin.requires" value="..."/>-->
