--- a/pdfimport/.classpath
+++ b/pdfimport/.classpath
@@ -9,9 +9,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/JOSM"/>
-	<classpathentry kind="lib" path="lib/fontbox-1.8.12.jar"/>
-	<classpathentry kind="lib" path="lib/jempbox-1.8.12.jar"/>
-	<classpathentry kind="lib" path="lib/pdfbox-1.8.12.jar" sourcepath="C:/Users/vippy/.m2/repository/org/apache/pdfbox/pdfbox/1.8.12/pdfbox-1.8.12-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=JOSM-pdfimport&amp;ivyXmlPath=ivy.xml&amp;confs=*"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
