--- a/apache-http/ivy.xml
+++ b/apache-http/ivy.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- License: GPL. For details, see LICENSE file. -->
 <ivy-module version="2.0">
-    <info organisation="org.openstreetmap" module="josm"/>
+    <info organisation="org.openstreetmap.josm.plugins" module="apache-http"/>
     <configurations>
         <conf name="ivy" description="Apache Ivy configuration for self-update"/>
         <!--  configuration that should be used when specifying dependencies -->
