--- a/alignways/build.xml
+++ b/alignways/build.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project name="alignways" default="dist" basedir=".">
     <!-- enter the SVN commit message -->
-    <property name="commit.message" value="AlignWays: moved to Shift-Spacebar due to shortcut confilcts with core. A is too overloaded"/>
+    <property name="commit.message" value="AlignWays: recompile for compatibility with JOSM r17867"/>
     <!-- enter the *lowest* JOSM version this plugin is currently compatible with -->
-    <property name="plugin.main.version" value="14281"/>
+    <property name="plugin.main.version" value="17867"/>
 
     <!-- Configure these properties (replace "..." accordingly).
          See https://josm.openstreetmap.de/wiki/DevelopersGuide/DevelopingPlugins
