--- a/CustomizePublicTransportStop/build.xml
+++ b/CustomizePublicTransportStop/build.xml
@@ -2,9 +2,9 @@
 <project name="CustomizePublicTransportStop" default="dist" basedir=".">
 
     <!-- enter the SVN commit message -->
-    <property name="commit.message" value="Commit message"/>
+    <property name="commit.message" value="CustomizePublicTransportStop: recompile for compatibility with JOSM r17867"/>
     <!-- enter the *lowest* JOSM version this plugin is currently compatible with -->
-    <property name="plugin.main.version" value="14153"/>
+    <property name="plugin.main.version" value="17867"/>
 
     <property name="plugin.author" value="Rodion Scherbakov"/>
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.customizepublictransportstop.CustomizePublicTransportStopPlugin"/>
