--- a/opendata/build.xml
+++ b/opendata/build.xml
@@ -33,7 +33,7 @@
     -->
     <target name="compile_poi" depends="init">
         <echo message="compiling Apache POI ... "/>
-        <javac srcdir="includes/org/apache/poi" debug="false" destdir="${plugin.build.dir}" includeAntRuntime="false" encoding="ISO-8859-1" />
+	<javac srcdir="includes/org/apache/poi" debug="false" destdir="${plugin.build.dir}" includeAntRuntime="false" encoding="ISO-8859-1" release="${java.lang.version}" />
     </target>
     <!--
     **********************************************************
@@ -42,7 +42,7 @@
     -->
     <target name="compile_jopendoc" depends="init">
         <echo message="compiling JOpenDocument ... "/>
-        <javac srcdir="includes/org/jopendocument" debug="false" destdir="${plugin.build.dir}" includeAntRuntime="false" encoding="ISO-8859-1" >
+	<javac srcdir="includes/org/jopendocument" debug="false" destdir="${plugin.build.dir}" includeAntRuntime="false" encoding="ISO-8859-1" release="${java.lang.version}">
             <classpath>
                 <!-- JDOM is required in an older version than the one embedded in geotools jar -->
                 <pathelement location="lib/jdom-1.1.3.jar"/>
@@ -57,7 +57,7 @@
     -->
     <target name="compile_j7zip" depends="init">
         <echo message="compiling J7Zip ... "/>
-        <javac srcdir="includes/org/j7zip" debug="true" destdir="${plugin.build.dir}" includeAntRuntime="false" encoding="UTF-8" />
+	<javac srcdir="includes/org/j7zip" debug="true" destdir="${plugin.build.dir}" includeAntRuntime="false" encoding="UTF-8" release="${java.lang.version}" />
     </target>
     <!--
     **********************************************************
@@ -66,7 +66,7 @@
     -->
     <target name="compile_neptune" depends="init, xjc_neptune">
         <echo message="compiling Neptune ... "/>
-        <javac srcdir="includes/neptune" debug="false" destdir="${plugin.build.dir}" includeAntRuntime="false" encoding="UTF-8">
+	<javac srcdir="includes/neptune" debug="false" destdir="${plugin.build.dir}" includeAntRuntime="false" encoding="UTF-8" release="${java.lang.version}">
             <classpath>
                 <fileset refid="jaxb.jars"/>
             </classpath>
