--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
     <condition property="isJava17"><matches string="${ant.java.version}" pattern="1[7-9]|[2-9][0-9]" /></condition>
     <condition property="isJava11"><matches string="${ant.java.version}" pattern="1[1-9]|[2-9][0-9]" /></condition>
     <!-- Specific plugins -->
-    <property name="java17_plugins" value="MapRoulette/build.xml"/>
+    <property name="java17_plugins" value="maproulette/build.xml"/>
     <property name="ordered_plugins" value="jackson/build.xml
                                             jaxb/build.xml
                                             jna/build.xml
