--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,8 @@
     <condition property="isJava11"><matches string="${ant.java.version}" pattern="1[1-9]|[2-9][0-9]" /></condition>
     <!-- Specific plugins -->
     <property name="java17_plugins" value="maproulette/build.xml
-                                           imageio/build.xml"/>
+                                            imageio/build.xml
+                                            todo/build.xml"/>
     <property name="ordered_plugins" value="jackson/build.xml
                                             jaxb/build.xml
                                             jna/build.xml
