--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,7 @@
     <!-- Specific plugins -->
     <property name="java17_plugins" value="maproulette/build.xml
                                             imageio/build.xml
+                                            pmtiles/build.xml
                                             todo/build.xml"/>
     <property name="ordered_plugins" value="jackson/build.xml
                                             jaxb/build.xml
