--- a/build.xml
+++ b/build.xml
@@ -7,9 +7,11 @@
         <ant dir="../core" target="test-compile"/>
     </target>
     <!-- For Java specific stuff by version -->
+    <condition property="isJava21"><matches string="${ant.java.version}" pattern="2[1-9]|[3-9][0-9]" /></condition>
     <condition property="isJava17"><matches string="${ant.java.version}" pattern="1[7-9]|[2-9][0-9]" /></condition>
     <condition property="isJava11"><matches string="${ant.java.version}" pattern="1[1-9]|[2-9][0-9]" /></condition>
     <!-- Specific plugins -->
+    <property name="java21_plugins" value="fit/build.xml" />
     <property name="java17_plugins" value="maproulette/build.xml
                                             imageio/build.xml
                                             pmtiles/build.xml
@@ -35,8 +37,9 @@
                 <filelist dir="." files="${ordered_plugins}"/>
                 <!-- Build JavaFX plugins only with Java 11+ -->
                 <filelist dir="." files="${javafx_plugins}" if:set="isJava11"/>
-               <filelist dir="." files="${java17_plugins}" if:set="isJava17"/>
-               <fileset  dir="." includes="*/build.xml" excludes="00_*/build.xml *.wip/build.xml ${javafx_plugins} ${ordered_plugins} ${java17_plugins}"/>
+                <filelist dir="." files="${java17_plugins}" if:set="isJava17"/>
+                <filelist dir="." files="${java21_plugins}" if:set="isJava21"/>
+                <fileset  dir="." includes="*/build.xml" excludes="00_*/build.xml *.wip/build.xml ${javafx_plugins} ${ordered_plugins} ${java17_plugins}"/>
             </subant>
         </sequential>
     </macrodef>
